--- a/src/styles/bar.css
+++ b/src/styles/bar.css
@@ -1,4 +1,4 @@
-.header {
+.bar {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -8,7 +8,7 @@
     margin-bottom: 3.2rem;
 }
 
-.header__title {
+.bar__title {
     font-size: 3.2rem;
     font-weight: 700;
     color: var(--primary-text);
