--- a/src/styles/screen.css
+++ b/src/styles/screen.css
@@ -13,7 +13,7 @@
     font-size: 3.2rem;
     font-weight: 700;
     text-align: end;
-    line-height: 3.2rem;
+    line-height: 1;
     letter-spacing: -0.05rem;
     color: var(--primary-text);
     margin: auto 0;
@@ -26,7 +26,6 @@
 
     .screen__result {
         font-size: 4.8rem;
-        line-height: 4.8rem;
         letter-spacing: -0.1rem;
     }
 }
